2009-09-29  Jan Moringen  <scymtym@users.sourceforge.net>

	* obby/rudel-obby-server.el
	(rudel-obby-server-state-before-join::rudel-obby/net6_client_login):
	accept two additional arguments: global-password and user-password

	* rudel-session-initiation.el (rudel-configured-sessions):
	improved documentation string

2009-09-29  Jan Moringen  <scymtym@users.sourceforge.net>

	* INSTALL (REQUIREMENTS): wording
	(INSTALLING): mention other things that cause rudel to be
	autoloaded; minor cosmetic changes
	(COMPILING): fixed filename compile.el -> rudel-compile.el
	* ChangeLog: updated

	* rudel-compile.el (header): added copyright and meta data
	(code): let-bind rudel-dir; call `byte-recompile-directory' just
	once since it operates recursively

2009-09-28  Jan Moringen  <scymtym@users.sourceforge.net>

	* obby/rudel-obby-server.el (header): better documentation
	(require rudel-state-machine): now required for state machine
	style handling of client connections
	(require rudel-obby-state): now required; provides base class for
	states
	(rudel-obby-server-state-new): new class; client connection state
	new
	(rudel-obby-server-state-encryption-negotiate): new class; client connection state
	for negotiating encryption
	(rudel-obby-server-state-before-join): new class; client connection state
	for waiting for login request
	(rudel-obby-server-state-new): new class; client connection state
	entered after session setup and joining is complete
	(rudel-obby-server-connection-states): new variable; list of
	states and their symbolic names
	(rudel-obby-client): now derived from rudel-state-machine

	* obby/rudel-obby.el (rudel-obby-backend::rudel-ask-connect-info):
	check for :global-password and :user-password correctly; do not
	put them into the list when they are ""
	(rudel-obby-backend::rudel-connect): comment

	* rudel-session-initiation.el
	(rudel-configured-sessions-backend::rudel-discover): let
	`rudel-session-initiation-adjust-info' do the heavy lifting